<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pose_estimation</name>
  <version>0.1.0</version>
  <description>
  Probability Distributions based LOAM algorithm
  This method using odometry and mapping based on
  Probability distributions of edge and planar points.
  LOAM is described in the following paper:
  J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
    Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014
  </description>

  <maintainer email="kyuwon.kim@hlcompany.com">KKW</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rosbag2</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>message_runtime</depend>
  <depend>launch</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
