<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_handler2</name>
  <version>0.1.0</version>
  <description>
  Input Sensor Handler (LIDAR, IMU, Odometer)
  </description>

  <maintainer email="kyuwon.kim@hlcompany.com">KKW</maintainer>


  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>message_runtime</depend>
  <depend>imu_robor_msg</depend>
  <depend>launch</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>PCL</depend>
  <depend>novatel_oem7_msgs</depend>


  <!-- <exec_depend>message_runtime</exec_depend> -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
